--- a/labs/list2/list_2.ipynb
+++ b/labs/list2/list_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,6 +210,12 @@
     "\n",
     "    get_vertexs_values() -> list:\n",
     "        Returns a list of vertex values in the graph.\n",
+    "        \n",
+    "    get_vertex_id(self) -> List:\n",
+    "        Returns a list of IDs of all vertices in the graph.\n",
+    "        \n",
+    "    get_id_names_maping() -> dict:\n",
+    "        Returns a dictionary that maps values to their IDs.\n",
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self) -> None:\n",
@@ -231,7 +237,21 @@
     "        self.vertices.append(Vert)\n",
     "\n",
     "    def get_vertexs_values(self):\n",
-    "        return [verex.get_value() for verex in self.vertices]"
+    "        return [verex.get_value() for verex in self.vertices]\n",
+    "\n",
+    "    def get_vertex_id(self):\n",
+    "        return [vert.get_ID() for vert in self.vertices]\n",
+    "    \n",
+    "    def get_id_names_maping(self):\n",
+    "        end_name_id_map = {}\n",
+    "        name_id_dict = self.name_id_dict\n",
+    "        for id in name_id_dict:\n",
+    "            if len(name_id_dict[id]) == 1:\n",
+    "                end_name_id_map[name_id_dict[id][0]] = id\n",
+    "            else:\n",
+    "                for j, _ in enumerate(name_id_dict[id]):\n",
+    "                    end_name_id_map[name_id_dict[id][j]] = [id, j]\n",
+    "        return end_name_id_map\n"
    ]
   },
   {
@@ -244,16 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value ['A', 'B', 'C']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['A', 'B', 'C']"
+       "{0: 'A', 1: 'B', 2: 'C'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,29 +290,39 @@
     "g.addVertex(\"A\")\n",
     "g.addVertex(\"B\")\n",
     "g.addVertex(\"C\")\n",
-    "g.get_vertexs_values()"
+    "print(\"Value\", g.get_vertexs_values())\n",
+    "g.get_id_names_maping()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 0, value: A\n",
+      "ID: 1, value: A\n",
+      "ID: 2, value: C\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_104794/3959064314.py:185: Warning: There are 2 vertex with the same value:A in the graph.\n",
+      "/tmp/ipykernel_114223/1148832528.py:188: Warning: There are 2 vertex with the same value:A in the graph.\n",
       "  warnings.warn(f\"There are {len(self.name_id_dict[Vert.get_value()])} vertex with the same value:{Vert.get_value()} in the graph.\", Warning)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['A', 'A', 'C']"
+       "{0: ['A', 0], 1: ['A', 1], 2: 'C'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +332,30 @@
     "g.addVertex(\"A\")\n",
     "g.addVertex(\"A\")\n",
     "g.addVertex(\"C\")\n",
-    "g.get_vertexs_values()"
+    "for id, value in zip(g.get_vertex_id(), g.get_vertexs_values()):\n",
+    "    print(f\"ID: {id}, value: {value}\")\n",
+    "g.get_id_names_maping() #Duplicate values are represented as a tuple [\"Value\", \"order\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Graph' object has no attribute 'get_vertex_info'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m g\u001b[39m.\u001b[39;49mget_vertex_info()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Graph' object has no attribute 'get_vertex_info'"
+     ]
+    }
+   ],
+   "source": [
+    "g.get_vertex_info()"
    ]
   }
  ],
