--- a/labs/list2/list_2.ipynb
+++ b/labs/list2/list_2.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +208,9 @@
     "    addVertex(vert: str) -> None:\n",
     "        Adds a vertex to the graph.\n",
     "\n",
+    "    addVerticesFromList(vertex_list: list) -> None:\n",
+    "        Adds a list of vertices to the graph.\n",
+    "    \n",
     "    get_vertexs_values() -> list:\n",
     "        Returns a list of vertex values in the graph.\n",
     "        \n",
@@ -236,6 +239,11 @@
     "        self.id_vertex_dict[Vert.get_ID()] = Vert\n",
     "        self.vertices.append(Vert)\n",
     "\n",
+    "    def addVerticesFromList(self, vertex_list: list):\n",
+    "        for vert in vertex_list:\n",
+    "            self.addVertex(vert)\n",
+    "\n",
+    "    \n",
     "    def get_vertexs_values(self):\n",
     "        return [verex.get_value() for verex in self.vertices]\n",
     "\n",
@@ -251,7 +259,52 @@
     "            else:\n",
     "                for j, _ in enumerate(name_id_dict[id]):\n",
     "                    end_name_id_map[name_id_dict[id][j]] = [id, j]\n",
-    "        return end_name_id_map\n"
+    "        return end_name_id_map\n",
+    "    \n",
+    "    def addEdge(self, fromVert: str | list[str, int], toVert: str | list[str, int], weight: Number = 1):\n",
+    "        if type(fromVert) is list:\n",
+    "            name, order = fromVert\n",
+    "            fromVert_id = self.name_id_dict[name][order]\n",
+    "        elif fromVert in self.name_id_dict:\n",
+    "            if len(self.name_id_dict[fromVert]) == 1:\n",
+    "                fromVert_id = self.name_id_dict[fromVert][0]\n",
+    "            else:\n",
+    "                raise ValueError(f\"There are {len(self.name_id_dict[fromVert])} vertices in the graph named '{fromVert}', please use as argument fromVert = ['{fromVert}', order].\")\n",
+    "        else:\n",
+    "            self.addVertex(fromVert)\n",
+    "            fromVert_id = self.name_id_dict[fromVert][-1]\n",
+    "\n",
+    "        if type(toVert) is list:\n",
+    "            name, order = toVert\n",
+    "            toVert_id = self.name_id_dict[name][order]\n",
+    "        elif toVert in self.name_id_dict:\n",
+    "            if len(self.name_id_dict[toVert]) == 1:\n",
+    "                toVert_id = self.name_id_dict[toVert][0]\n",
+    "            else:\n",
+    "                raise ValueError(f\"There are {len(self.name_id_dict[toVert])} vertices in the graph named '{toVert}', please use as argument toVert = ['{toVert}', order].\")\n",
+    "        else:\n",
+    "            self.addVertex(toVert)\n",
+    "            toVert_id = self.name_id_dict[toVert][-1]\n",
+    "\n",
+    "        if (fromVert_id, toVert_id) in self.edges_by_id or (toVert_id, fromVert_id) in self.edges_by_id:\n",
+    "            warnings.warn(\"You are trying to add an existing edge.\", Warning)\n",
+    "            if self.edges_by_id[(fromVert_id, toVert_id)].get_weight() != weight:\n",
+    "                self.edges_by_id[(fromVert_id, toVert_id)].weight = weight\n",
+    "                self.edges_by_id[(toVert_id, fromVert_id)].weight = weight\n",
+    "                warnings.warn(\"You updat the weight value of edge [fromVert, toVert].\", Warning)\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            fromVertex = self.id_vertex_dict[fromVert_id]\n",
+    "            toVertex = self.id_vertex_dict[toVert_id]\n",
+    "            edge1 = Edge(fromVertex, toVertex, weight)\n",
+    "            edge2 = Edge(toVertex, fromVertex, weight)\n",
+    "            self.edges.extend([edge1, edge2])\n",
+    "            self.edges_by_id[(fromVert_id, toVert_id)] = edge1\n",
+    "            self.edges_by_id[(toVert_id, fromVert_id)] = edge2\n",
+    "\n",
+    "            fromVertex.add_edge(edge1)\n",
+    "            toVertex.add_edge(edge2)"
    ]
   },
   {
@@ -264,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +333,7 @@
        "{0: 'A', 1: 'B', 2: 'C'}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +365,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_114223/1148832528.py:188: Warning: There are 2 vertex with the same value:A in the graph.\n",
+      "/tmp/ipykernel_114223/951291403.py:194: Warning: There are 2 vertex with the same value:A in the graph.\n",
       "  warnings.warn(f\"There are {len(self.name_id_dict[Vert.get_value()])} vertex with the same value:{Vert.get_value()} in the graph.\", Warning)\n"
      ]
     },
@@ -322,7 +375,7 @@
        "{0: ['A', 0], 1: ['A', 1], 2: 'C'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,24 +392,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Graph' object has no attribute 'get_vertex_info'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m g\u001b[39m.\u001b[39;49mget_vertex_info()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Graph' object has no attribute 'get_vertex_info'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 0, value: A\n",
+      "ID: 1, value: B\n",
+      "ID: 2, value: C\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'A', 1: 'B', 2: 'C'}"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "g.get_vertex_info()"
+    "g = Graph()\n",
+    "g.addVerticesFromList([\"A\",\"B\",\"C\"])\n",
+    "for id, value in zip(g.get_vertex_id(), g.get_vertexs_values()):\n",
+    "    print(f\"ID: {id}, value: {value}\")\n",
+    "g.get_id_names_maping() #Duplicate values are represented as a tuple [\"Value\", \"order\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value ['A', 'B', 'C']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 1): <__main__.Edge at 0x7f2b9b9792d0>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9bace210>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9ba02650>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9b8cd3d0>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9bb45950>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9bb472d0>}"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = Graph()\n",
+    "g.addVertex(\"A\")\n",
+    "g.addVertex(\"B\")\n",
+    "g.addVertex(\"C\")\n",
+    "g.addEdge(\"A\",\"B\")\n",
+    "g.addEdge(\"B\",\"C\")\n",
+    "g.addEdge(\"C\",\"A\")\n",
+    "\n",
+    "print(\"Value\", g.get_vertexs_values())\n",
+    "g.edges_by_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value ['A', 'B', 'C']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_114223/951291403.py:248: Warning: You are trying to add an existing edge.\n",
+      "  warnings.warn(\"You are trying to add an existing edge.\", Warning)\n",
+      "/tmp/ipykernel_114223/951291403.py:252: Warning: You updat the weight value of edge [fromVert, toVert].\n",
+      "  warnings.warn(\"You updat the weight value of edge [fromVert, toVert].\", Warning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 1): <__main__.Edge at 0x7f2b9bc59fd0>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9bc58a50>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9bc58450>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9bc5a050>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9bc59750>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9bc59b50>}"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = Graph()\n",
+    "g.addVertex(\"A\")\n",
+    "g.addVertex(\"B\")\n",
+    "g.addVertex(\"C\")\n",
+    "g.addEdge(\"A\",\"B\")\n",
+    "g.addEdge(\"B\",\"C\")\n",
+    "g.addEdge(\"C\",\"A\",1)\n",
+    "g.addEdge(\"C\",\"A\",2)\n",
+    "\n",
+    "print(\"Value\", g.get_vertexs_values())\n",
+    "g.edges_by_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
