Create addVertices, addEdges and addNeightborns

--- a/labs/list2/list_2.ipynb
+++ b/labs/list2/list_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,6 +219,16 @@
     "        \n",
     "    get_id_names_maping() -> dict:\n",
     "        Returns a dictionary that maps values to their IDs.\n",
+    "\n",
+    "    addEdgesFromList(edgeList: list) -> None:\n",
+    "        Adds a list of edges to the graph.\n",
+    "\n",
+    "    getVertices() -> list:\n",
+    "        Returns a list of vertices in the graph.\n",
+    "    \n",
+    "    getEdges() -> list:\n",
+    "        Returns a list of edges in the graph.\n",
+    "    \n",
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self) -> None:\n",
@@ -304,7 +314,31 @@
     "            self.edges_by_id[(toVert_id, fromVert_id)] = edge2\n",
     "\n",
     "            fromVertex.add_edge(edge1)\n",
-    "            toVertex.add_edge(edge2)"
+    "            toVertex.add_edge(edge2)\n",
+    "            \n",
+    "    def addEdgesFromList(self, edgeList: list):\n",
+    "        for edge in edgeList:\n",
+    "            self.addEdge(*edge)\n",
+    "    \n",
+    "    def getVertices(self):\n",
+    "        return self.vertices\n",
+    "\n",
+    "    def getEdges(self):\n",
+    "            return self.edges\n",
+    "    \n",
+    "    def getNeighbors(self, vertKey: str | list[str, int] | Vertex):\n",
+    "        if type(vertKey) is Vertex:\n",
+    "            return vertKey.edges\n",
+    "        elif type(vertKey) is list:\n",
+    "            name, order = vertKey\n",
+    "            Vert_id = self.name_id_dict[name][order]\n",
+    "            return [edge.get_endpoint() for edge in self.id_vertex_dict[Vert_id].edges]\n",
+    "        else:\n",
+    "            if len(self.name_id_dict[vertKey]) == 1:\n",
+    "                Vert_id = self.name_id_dict[vertKey][0]\n",
+    "                return [edge.get_endpoint() for edge in self.id_vertex_dict[Vert_id].edges]\n",
+    "            else:\n",
+    "                raise ValueError(f\"There are {len(self.name_id_dict[Vert_id])} vertices in the graph named '{vertKey}', please use as argument vertKey = ['{vertKey}', order].\")\n"
    ]
   },
   {
@@ -317,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +367,7 @@
        "{0: 'A', 1: 'B', 2: 'C'}"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +399,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_114223/951291403.py:194: Warning: There are 2 vertex with the same value:A in the graph.\n",
+      "/tmp/ipykernel_114223/116706319.py:204: Warning: There are 2 vertex with the same value:A in the graph.\n",
       "  warnings.warn(f\"There are {len(self.name_id_dict[Vert.get_value()])} vertex with the same value:{Vert.get_value()} in the graph.\", Warning)\n"
      ]
     },
@@ -375,7 +409,7 @@
        "{0: ['A', 0], 1: ['A', 1], 2: 'C'}"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +444,7 @@
        "{0: 'A', 1: 'B', 2: 'C'}"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -438,15 +472,15 @@
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f2b9b9792d0>,\n",
-       " (1, 0): <__main__.Edge at 0x7f2b9bace210>,\n",
-       " (1, 2): <__main__.Edge at 0x7f2b9ba02650>,\n",
-       " (2, 1): <__main__.Edge at 0x7f2b9b8cd3d0>,\n",
-       " (2, 0): <__main__.Edge at 0x7f2b9bb45950>,\n",
-       " (0, 2): <__main__.Edge at 0x7f2b9bb472d0>}"
+       "{(0, 1): <__main__.Edge at 0x7f2b9bb3a610>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9bb32190>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9bdc5c90>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9b9996d0>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9b505c90>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9b504f90>}"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -480,24 +514,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_114223/951291403.py:248: Warning: You are trying to add an existing edge.\n",
+      "/tmp/ipykernel_114223/116706319.py:258: Warning: You are trying to add an existing edge.\n",
       "  warnings.warn(\"You are trying to add an existing edge.\", Warning)\n",
-      "/tmp/ipykernel_114223/951291403.py:252: Warning: You updat the weight value of edge [fromVert, toVert].\n",
+      "/tmp/ipykernel_114223/116706319.py:262: Warning: You updat the weight value of edge [fromVert, toVert].\n",
       "  warnings.warn(\"You updat the weight value of edge [fromVert, toVert].\", Warning)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f2b9bc59fd0>,\n",
-       " (1, 0): <__main__.Edge at 0x7f2b9bc58a50>,\n",
-       " (1, 2): <__main__.Edge at 0x7f2b9bc58450>,\n",
-       " (2, 1): <__main__.Edge at 0x7f2b9bc5a050>,\n",
-       " (2, 0): <__main__.Edge at 0x7f2b9bc59750>,\n",
-       " (0, 2): <__main__.Edge at 0x7f2b9bc59b50>}"
+       "{(0, 1): <__main__.Edge at 0x7f2b9b8343d0>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9b837050>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9b8346d0>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9b836f90>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9b836590>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9b837450>}"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,6 +548,139 @@
     "\n",
     "print(\"Value\", g.get_vertexs_values())\n",
     "g.edges_by_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 0, value: A\n",
+      "ID: 1, value: B\n",
+      "ID: 2, value: C\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 1): <__main__.Edge at 0x7f2b9bc1cb50>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9bc1fc10>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9bc1d450>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9bc1e810>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9bc1f1d0>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9bc1f9d0>}"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = Graph()\n",
+    "g.addVertex(\"A\")\n",
+    "g.addVertex(\"B\")\n",
+    "g.addVertex(\"C\")\n",
+    "g.addEdgesFromList([[\"A\",\"B\"],\n",
+    "                    [\"B\",\"C\"],\n",
+    "                    [\"C\",\"A\"]])\n",
+    "\n",
+    "for id, value in zip(g.get_vertex_id(), g.get_vertexs_values()):\n",
+    "    print(f\"ID: {id}, value: {value}\")\n",
+    "g.edges_by_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['A', <__main__.Vertex at 0x7f2b9bc1db90>],\n",
+       " ['B', <__main__.Vertex at 0x7f2b9bc1eb90>],\n",
+       " ['C', <__main__.Vertex at 0x7f2b9ba00c50>]]"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = Graph()\n",
+    "g.addVertex(\"A\")\n",
+    "g.addVertex(\"B\")\n",
+    "g.addVertex(\"C\")\n",
+    "g.addEdgesFromList([[\"A\",\"B\"],\n",
+    "                    [\"B\",\"C\"],\n",
+    "                    [\"C\",\"A\"]])\n",
+    "[[vert.get_value(), vert] for vert in g.getVertices()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[['A', 'B'], <__main__.Edge at 0x7f2b9b5e6b50>],\n",
+       " [['B', 'A'], <__main__.Edge at 0x7f2b9b5e4850>],\n",
+       " [['B', 'C'], <__main__.Edge at 0x7f2b9b5e4910>],\n",
+       " [['C', 'B'], <__main__.Edge at 0x7f2b9b5e49d0>],\n",
+       " [['C', 'A'], <__main__.Edge at 0x7f2b9b5e4b90>],\n",
+       " [['A', 'C'], <__main__.Edge at 0x7f2b9b5e4550>]]"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = Graph()\n",
+    "g.addVertex(\"A\")\n",
+    "g.addVertex(\"B\")\n",
+    "g.addVertex(\"C\")\n",
+    "g.addEdgesFromList([[\"A\",\"B\"],\n",
+    "                    [\"B\",\"C\"],\n",
+    "                    [\"C\",\"A\"]])\n",
+    "[[edge.get_values(),edge] for edge in g.getEdges()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['B', <__main__.Vertex at 0x7f2b9bc05950>],\n",
+       " ['C', <__main__.Vertex at 0x7f2b9bc05e90>]]"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = Graph()\n",
+    "g.addVertex(\"A\")\n",
+    "g.addVertex(\"B\")\n",
+    "g.addVertex(\"C\")\n",
+    "g.addEdgesFromList([[\"A\",\"B\"],\n",
+    "                    [\"B\",\"C\"],\n",
+    "                    [\"C\",\"A\"]])\n",
+    "[[vert.get_value(), vert ] for vert in g.getNeighbors(\"A\")]"
    ]
   },
   {
