--- a/labs/list2/list_2.ipynb
+++ b/labs/list2/list_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +228,9 @@
     "    \n",
     "    getEdges() -> list:\n",
     "        Returns a list of edges in the graph.\n",
+    "        \n",
+    "    __contains__(vertKey: str | list[str, int] | Vertex) -> bool:\n",
+    "        Returns True if a vertex exists in the graph, False otherwise.\n",
     "    \n",
     "    \"\"\"\n",
     "    \n",
@@ -338,7 +341,27 @@
     "                Vert_id = self.name_id_dict[vertKey][0]\n",
     "                return [edge.get_endpoint() for edge in self.id_vertex_dict[Vert_id].edges]\n",
     "            else:\n",
-    "                raise ValueError(f\"There are {len(self.name_id_dict[Vert_id])} vertices in the graph named '{vertKey}', please use as argument vertKey = ['{vertKey}', order].\")\n"
+    "                raise ValueError(f\"There are {len(self.name_id_dict[Vert_id])} vertices in the graph named '{vertKey}', please use as argument vertKey = ['{vertKey}', order].\")\n",
+    "    \n",
+    "    def __contains__(self, vertKey: str | list[str, int] | Vertex):\n",
+    "        if type(vertKey) is Vertex:\n",
+    "            return vertKey in self.vertices\n",
+    "\n",
+    "        elif type(vertKey) is list:\n",
+    "            name, order = vertKey\n",
+    "            try:\n",
+    "                id = self.name_id_dict[name][order]\n",
+    "                if self.id_vertex_dict[id]: return True\n",
+    "            except:\n",
+    "                return False\n",
+    "        else:\n",
+    "            if vertKey in self.name_id_dict:\n",
+    "                if len(self.name_id_dict[vertKey]) == 1:\n",
+    "                    Vert_id = self.name_id_dict[vertKey][0]\n",
+    "                    return self.id_vertex_dict[Vert_id].edges\n",
+    "                else:\n",
+    "                    raise ValueError(f\"There are {len(self.name_id_dict[vertKey])} vertices in the graph named '{vertKey}', please use as argument vertKey = ['{vertKey}', order].\")\n",
+    "\n"
    ]
   },
   {
@@ -351,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +390,7 @@
        "{0: 'A', 1: 'B', 2: 'C'}"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +422,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_114223/116706319.py:204: Warning: There are 2 vertex with the same value:A in the graph.\n",
+      "/tmp/ipykernel_114223/1673963520.py:204: Warning: There are 2 vertex with the same value:A in the graph.\n",
       "  warnings.warn(f\"There are {len(self.name_id_dict[Vert.get_value()])} vertex with the same value:{Vert.get_value()} in the graph.\", Warning)\n"
      ]
     },
@@ -409,7 +432,7 @@
        "{0: ['A', 0], 1: ['A', 1], 2: 'C'}"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +467,7 @@
        "{0: 'A', 1: 'B', 2: 'C'}"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -472,15 +495,15 @@
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f2b9bb3a610>,\n",
-       " (1, 0): <__main__.Edge at 0x7f2b9bb32190>,\n",
-       " (1, 2): <__main__.Edge at 0x7f2b9bdc5c90>,\n",
-       " (2, 1): <__main__.Edge at 0x7f2b9b9996d0>,\n",
-       " (2, 0): <__main__.Edge at 0x7f2b9b505c90>,\n",
-       " (0, 2): <__main__.Edge at 0x7f2b9b504f90>}"
+       "{(0, 1): <__main__.Edge at 0x7f2b9b568f10>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9b5687d0>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9b5685d0>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9b568410>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9b568250>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9b568550>}"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -514,24 +537,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_114223/116706319.py:258: Warning: You are trying to add an existing edge.\n",
+      "/tmp/ipykernel_114223/1673963520.py:258: Warning: You are trying to add an existing edge.\n",
       "  warnings.warn(\"You are trying to add an existing edge.\", Warning)\n",
-      "/tmp/ipykernel_114223/116706319.py:262: Warning: You updat the weight value of edge [fromVert, toVert].\n",
+      "/tmp/ipykernel_114223/1673963520.py:262: Warning: You updat the weight value of edge [fromVert, toVert].\n",
       "  warnings.warn(\"You updat the weight value of edge [fromVert, toVert].\", Warning)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f2b9b8343d0>,\n",
-       " (1, 0): <__main__.Edge at 0x7f2b9b837050>,\n",
-       " (1, 2): <__main__.Edge at 0x7f2b9b8346d0>,\n",
-       " (2, 1): <__main__.Edge at 0x7f2b9b836f90>,\n",
-       " (2, 0): <__main__.Edge at 0x7f2b9b836590>,\n",
-       " (0, 2): <__main__.Edge at 0x7f2b9b837450>}"
+       "{(0, 1): <__main__.Edge at 0x7f2b9b568d10>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9b56aa10>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9b568d50>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9b569850>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9b5693d0>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9b56a490>}"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -567,15 +590,15 @@
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f2b9bc1cb50>,\n",
-       " (1, 0): <__main__.Edge at 0x7f2b9bc1fc10>,\n",
-       " (1, 2): <__main__.Edge at 0x7f2b9bc1d450>,\n",
-       " (2, 1): <__main__.Edge at 0x7f2b9bc1e810>,\n",
-       " (2, 0): <__main__.Edge at 0x7f2b9bc1f1d0>,\n",
-       " (0, 2): <__main__.Edge at 0x7f2b9bc1f9d0>}"
+       "{(0, 1): <__main__.Edge at 0x7f2b9b565010>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9b566a90>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9b565fd0>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9b5653d0>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9b565f50>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9b564d50>}"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,18 +619,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['A', <__main__.Vertex at 0x7f2b9bc1db90>],\n",
-       " ['B', <__main__.Vertex at 0x7f2b9bc1eb90>],\n",
-       " ['C', <__main__.Vertex at 0x7f2b9ba00c50>]]"
+       "[['A', <__main__.Vertex at 0x7f2b9b790f10>],\n",
+       " ['B', <__main__.Vertex at 0x7f2b9bbe9cd0>],\n",
+       " ['C', <__main__.Vertex at 0x7f2b9bc0d210>]]"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,21 +648,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[['A', 'B'], <__main__.Edge at 0x7f2b9b5e6b50>],\n",
-       " [['B', 'A'], <__main__.Edge at 0x7f2b9b5e4850>],\n",
-       " [['B', 'C'], <__main__.Edge at 0x7f2b9b5e4910>],\n",
-       " [['C', 'B'], <__main__.Edge at 0x7f2b9b5e49d0>],\n",
-       " [['C', 'A'], <__main__.Edge at 0x7f2b9b5e4b90>],\n",
-       " [['A', 'C'], <__main__.Edge at 0x7f2b9b5e4550>]]"
+       "[[['A', 'B'], <__main__.Edge at 0x7f2b9b566110>],\n",
+       " [['B', 'A'], <__main__.Edge at 0x7f2b9b566bd0>],\n",
+       " [['B', 'C'], <__main__.Edge at 0x7f2b9b567810>],\n",
+       " [['C', 'B'], <__main__.Edge at 0x7f2b9b566250>],\n",
+       " [['C', 'A'], <__main__.Edge at 0x7f2b9b564c10>],\n",
+       " [['A', 'C'], <__main__.Edge at 0x7f2b9b566e50>]]"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,17 +680,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['B', <__main__.Vertex at 0x7f2b9bc05950>],\n",
-       " ['C', <__main__.Vertex at 0x7f2b9bc05e90>]]"
+       "[['B', <__main__.Vertex at 0x7f2b9b504b10>],\n",
+       " ['C', <__main__.Vertex at 0x7f2b9b505810>]]"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,10 +708,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 238,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, True, False)"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = Graph()\n",
+    "g.addVertex(\"A\")\n",
+    "g.addVertex(\"B\")\n",
+    "g.addVertex(\"C\")\n",
+    "g.addEdgesFromList([[\"A\",\"B\"],\n",
+    "                    [\"B\",\"C\"],\n",
+    "                    [\"C\",\"A\"]])\n",
+    "\n",
+    "\"A\" in g, \"B\" in g, \"D\" in g"
+   ]
   }
  ],
  "metadata": {
